# rust-xos

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  executables.txt  rboot.conf  rust-toolchain.toml  x86_64-unknown-none.json  x86_64-unknown-xos.json
boot/: Cargo.toml
boot/src/: config.rs  lib.rs  main.rs  page_table.rs
diskread/: Cargo.toml
diskread/src/: main.rs  sys_device.rs
draw-plot/: Cargo.toml
draw-plot/src/: main.rs
elf-loader/: Cargo.toml
elf-loader/src/: lib.rs
fatpart/: Cargo.toml
fatpart/src/: lib.rs  partition.rs  utils.rs
fatpart/src/abstract/: device.rs  directory.rs  file.rs  mod.rs
fatpart/src/devices/: disk.rs  fat_partition.rs  mod.rs  partition.rs
fatpart/src/struct/: bpb.rs  datetime.rs  dir_entry.rs  fat_table.rs  mod.rs  partition.rs
hal/: Cargo.toml
hal/src/: block_device.rs  lib.rs  parted_disk.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs
kernel/: Cargo.toml  x86_64-unknown-none.json
kernel/src/: allocator.rs  console.rs  display.rs  driver_holder.rs  gdt.rs  interrupts.rs  log.rs  logging.rs  macros.rs  main.rs  memory.rs  process.rs  uefi_clock.rs
kernel/src/apps/: ide_wrap.rs  mod.rs  shell.rs
kernel/src/drivers/: filesystem.rs  ide.rs  keyboard.rs  mod.rs
kernel/src/interrupts/: consts.rs  handlers.rs  keyboard.rs  mod.rs  syscall.rs
kernel/src/interrupts/apic/: mod.rs  xapic.rs
kernel/src/utils/: gop_display.rs  mod.rs  uefi_clock.rs
plota/: Cargo.toml
plota/src/: main.rs
plotb/: Cargo.toml
plotb/src/: main.rs
plotc/: Cargo.toml
plotc/src/: main.rs
sampleio/: Cargo.toml
sampleio/src/: main.rs
to-upper/: Cargo.toml
to-upper/src/: main.rs
user0/: Cargo.toml
user0/src/: main.rs
user1/: Cargo.toml
user1/src/: main.rs
user2/: Cargo.toml
user2/src/: main.rs
user3/: Cargo.toml
user3/src/: main.rs
xklibr/: Cargo.toml
xklibr/src/: gop_display.rs  lib.rs
xlibr/: Cargo.toml
xlibr/src/: allocator.rs  console.rs  display.rs  input.rs  lib.rs  syscall.rs
