[package]
name = "boot"
version = "0.0.1"
authors = ["Yuze Fu <i@xfox.me>"]
edition = "2018"
description = "x86_64 UEFI BootLoader"

# [dependencies]
# uefi = "0.4.5"
# uefi-services = { version = "0.2" }
# log = "0.4"
# rlibc = "1.0.0"

[dependencies]
elf-loader = { path = "../elf-loader" }
log = "0.4"
rlibc = "1.0"
uefi = "0.15.2"
uefi-services = { version = "0.12.1", optional = true }
x86_64 = "0.14.9"
xmas-elf = "0.8.0"
arrayvec = { version = "0.7.2", default-features = false }

[features]
rboot = ["uefi-services"]
default = ["rboot"]
