[package]
name = "diskread"
version = "0.1.0"
authors = ["Yuze Fu <i@xfox.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fatpart = { path = "../fatpart" }
rlibc = "1.0.0"
xlibr = { path = "../xlibr", default-features = false }
