[package]
name = "fatpart"
version = "0.1.0"
authors = ["Yuze Fu <i@xfox.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10"
bitflags = "1.2"
byteorder = { version = "1.3", default-features = false }
