[package]
name = "xlibr"
version = "0.1.0"
authors = ["Yuze Fu <i@xfox.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { path = "../boot", default-features = false }
embedded-graphics = "0.6"
xklibr = { path = "../xklibr" }
